fix the input getting cut off at the bottom

--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ canvas {
     border: none;
     padding: 10px;
     border-radius: 5px;
-    height: 1em;
+    height: 1.2em;
 }
 
 #playButton {
@@ -77,7 +77,7 @@ canvas {
     border: none;
     padding: 10px;
     border-radius: 5px;
-    height: 2.5em;
+    height: 2.7em;
     line-height: 0;
 
     background-color: #ededed;
@@ -95,5 +95,5 @@ h1 {
     font-family: Roboto;
     font-style: italic;
     height: 1em;
-    margin: 0.3em 0.3em 0.7em;
+    margin: 0.3em 0.3em 0.5em;
 }
